--- a/src/css/base.css
+++ b/src/css/base.css
@@ -16,6 +16,27 @@ p {
   padding: 5px;
 }
 
+.links {
+  align-self: center;
+}
+
+.linkedin_img {
+  padding-bottom: 6px;
+}
+
+.aside {
+  display: flex;
+}
+
+.details {
+  margin-bottom: 0;
+  border: 1px solid var(--color-quinary);
+}
+
+tbody tr:nth-child(even) {
+  background-color: var(--color-neutral-6);
+}
+
 .footer {
   background-color: var(--color-secondary);
   border-top: 2px solid black;
